navHeading and alignment fixes

--- a/src/components/download/download.css
+++ b/src/components/download/download.css
@@ -1,6 +1,6 @@
 @media only screen and (max-width: 759px) {
   .set1::-webkit-scrollbar {
-    width: 4px;
+    width: 0px;
   }
 
   /* Track */
